--- a/public/admin.html
+++ b/public/admin.html
@@ -17,9 +17,11 @@
       <button id="adminLoginBtn">Login</button>
       <div id="msg" class="muted"></div>
 
+
       <div style="height:12px"></div>
       <a class="adminLink" href="/staff.html">← Back to Staff</a>
     </div>
+<button id="printSalesBtn" class="secondary">🖨️ Print Today Sales (A4)</button>
 
     <div id="panel" class="card" style="display:none; margin-top:14px;">
       <h2>Orders</h2>
