Add today sales A4 print

--- a/public/admin.html
+++ b/public/admin.html
@@ -21,7 +21,9 @@
       <div style="height:12px"></div>
       <a class="adminLink" href="/staff.html">← Back to Staff</a>
     </div>
-<button id="printSalesBtn" class="secondary">🖨️ Print Today Sales (A4)</button>
+<button id="printTodayBtn" class="secondary">
+  🖨️ Print Today Sales (A4)
+</button>
 
     <div id="panel" class="card" style="display:none; margin-top:14px;">
       <h2>Orders</h2>
